k8s/apps/default/radarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      hostname: radarr
      priorityClassName: cluster-p1
      volumes:
        - name: arr-media
          nfs:
            server: nas.cbannister.casa
            path: /mnt/bighorse/arr
        - name: config
          persistentVolumeClaim:
            claimName: radarr
        - name: cache
          persistentVolumeClaim:
            claimName: radarr-cache
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 3005
        supplementalGroups: [3005]
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.4.4.10685@sha256:be53998a2d39cfa3c3315b70c7509a6a1f2a10c3aee9337653efc9f4c970430e
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "512m"
              memory: 1Gi
            limits:
              memory: 2Gi
          ports:
            - containerPort: 7878
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data
            - name: cache
              mountPath: /config/MediaCover
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /ping
              port: web
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe: *probe
