k8s/apps/default/radarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  selector:
    app: radarr
  type: ClusterIP
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      targetPort: web
      protocol: TCP
